2003-10-12  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.c (WORD_REG_USED): Use SP_REG instead of
	a literal.
	* config/h8300/h8300.h (REGNO_OK_FOR_BASE_P): Use MAC_REG
	instead of a literal.

2003-10-12  Nathanael Nerode  <neroden@gcc.gnu.org>

	* config.gcc (*-*-freebsd*): Use tm_defines instead of tiny
	config files which do the same thing.
	* config/freebsd3.h, config/freebsd4.h, config/freebsd5.h,
	config/freebsd6.h: Remove now unnecessary files.

2003-10-12  Hans-Peter Nilsson  <hp@bitrange.com>

	* doc/extend.texi (Function Attributes): Mention the exceptional
	path for noreturn-marked functions.

2003-10-12  Jan Hubicka  <jh@suse.cz>

	* cgraphunit.c (cgraph_decide_inlining): Fix uninitialized variable
	warning.

2003-10-12  Danny Smith  <dannysmith@users.sourceforge.net>

	* config/i386/i386.c (x86_this_parameter): Fix typo.

2003-10-11  Jan Hubicka  <jh@suse.cz>

	* Makefile.in (web.o): New.
	* web.c: New file.
	* rtl.h (web_main): Declare.
	* timervar.def (TV_WEB): New.
	* toplev.c (dump_file_index, dump_file_info): Add DFI_web.
	(rest_of_hanle_web): New.
	(flag_web): New static variable.
	(lang_independent_options): Add "web".
	(rest_of_compilation): Call rest_of_handle_web.
	* invoke.texi (-fweb): Document.
	* common.opt (fweb): New.
	* flags.h (flag_web): New.
	* opts.c (decode_options): Set flag_web at -O3.

	* passes.texi (web construction):  Document.
	* invoke.texi (-O3): Document that -fweb is enabled.

	* regrename.c (regrename_optimize): Deal better with situation when
	replacement failed.

	* sched-ebb.c: Include params.h and profile.h
	(schedule_ebbs):  Use tracer parameters to discover superblocks
	* Makefile.in (sched-ebb.o):  Add dependencies.

2003-10-11  Roger Sayle  <roger@eyesopen.com>

	* fold-const.c (negate_mathfn_p): New function to determine whether
	a built-in mathematical function is sign preserving, f(-x) == -f(x).
	Add support for BUILT_IN_ASIN, BUILT_IN_ASINF and BUILT_IN_ASINL.