@@ -1,3 +1,8 @@
+2003-10-12  Steven Bosscher  <steven@gcc.gnu.org>
+
+	* c-common.c (c_common_truthvalue_conversion): Warn if the
+	address of a non-weak function is used as a truth value.
+
 2003-10-12  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/h8300/h8300.c (WORD_REG_USED): Use SP_REG instead of
